# mlcore-cpp-python

./: .gitignore  Dockerfile  README.md  TODO.md  generate_stubs.sh  notes.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  vcpkg.json
.github/workflows/: ci.yml
algorithms/: decision_tree_classification.py  gradient_descent.py  kmeans.py  logistic_regression.py  mynumpy.py  polynomial_regression.py  polynomial_regression2.py  regression_implementation.py
algorithms/probablistic_models/: gaussian_nb.py  multinomial_nb.py  naive_bayes_classifier.py
algorithms/svm/: svc.py
algorithms/test/: clustering_test.py  kmeans_test.py  nn_test.py  test_linear_regression.py  test_logistic_regression.py
algorithms/tree/: decision_tree_classification.py  decision_tree_regressor.py
cpp/: CMakeLists.txt  example.cpp
cpp/.cache/clangd/index/: example.cpp.1CF714DCDA4DFE80.idx
cpp/include/: common.hpp  kmeans.hpp  linear_regression.h  regularization.hpp
cpp/include/nn/: nn.hpp
cpp/src/: base_model.hpp  bindings.cpp  process_numpy_example.cpp  xtensor_python_config.h
cpp/src/clustering/: kmeans.cpp
cpp/src/linear_model/: common.cpp  common.hpp  linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h  regularization.cpp
cpp/src/ndarray/: bindings.cpp  ndarray.cpp  ndarray.h
cpp/src/neural_network/: nn.cpp
tests/: example.py
tests/examples/: example.py  np_example.py
